apport (0.57) UNRELEASED; urgency=low

  * apport/ui.py: Intercept ENOMEM and fail gracefully; there is little else
    we can do at that point, and there is no point in presenting a crash
    report for this. (LP: #85155)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 19 Feb 2007 13:41:15 +0100

apport (0.56) feisty; urgency=low

  * apport/ui.py, open_url(): When being invoked as root, call gnome-open or
    firefox as root through sudo instead of dropping our uid/gid and calling
    it normally. The latter does not work for Firefox for some  mysterious
    reason. Thanks to Mika Fischer for this trick. (LP: #81207)
  * Add debian/local/ubuntu-bug.1: Manpage for ubuntu-bug. Add it to
    debian/apport.manpages.
  * qt4/apport-qt: Add some missing features that are present in the GTK UI:
    - Do not show details by default, add a button to show them.
    - Add complete/reduced bug report radio buttons.
    - Thanks to Michael Hofmann for this!

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 15 Feb 2007 14:59:07 +0100

apport (0.55) feisty; urgency=low

  * Add debian/local/ubuntu-bug: Check for a running KDE or Gnome session,
    availability of apport-gtk and -qt, and open the appropriate GUI in bug
    filing mode. This makes it convenient for shell users and is also required
    for proper Firefox 'Report a bug...' menu integration (see bug #85041).
  * debian/apport.install: Install ubuntu-bug to /usr/bin.
  * gtk/apport-gtk: Generously add some gtk.main_iteration() calls to avoid
    hanging dialogs, since we do not have a main loop.
  * apport/ui.py: Do not silently ignore exceptions while uploading data to
    Launchpad, but intercept them and display their message in the error
    dialog. (Part of LP: #84992)
  * apport/ui.py: Switch from edge.launchpad.net to production launchpad.net,
    since the necessary bits are now there. (LP: #84992)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 14 Feb 2007 13:37:52 +0100

apport (0.54) feisty; urgency=low
